Update README.md to BGW v0.10